<resources>
    <string name="app_name">MySchoolCafeteria</string>
    <string name="main_header">An easy way of make your order online</string>
    <string name="imagen_cafeteria">Imagen de la cafeteria</string>
    <string name="logo_uoc">Logotipo de la Universitat Oberta de Catalunya</string>
    <string name="title_activity_main_panel">MainActivity</string>
    <string name="title_home">My order</string>
    <string name="title_dashboard">Pick up map</string>
    <string name="title_notifications">Notifications</string>
    <string name="location_text">Rambla de Poblenou 156</string>
    <string name="email">cafeteria@uoc.edu</string>
    <string name="location_description">icono de la localizacion</string>
    <string name="email_description">icono email</string>
    <string name="sign_out">Sign Out</string>
    <string name="default_price">1€</string>
    <string name="username">Nombre del usuario...</string>
    <string name="floating_button_desc">Boton flotante de pedir</string>
</resources>