<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/order">

    <fragment
            android:id="@+id/order"
            android:name="com.iesribera.myschoolcafeteria.ui.order.OrderFragment"
            android:label="@string/title_home"
            tools:layout="@layout/order" />

    <fragment
            android:id="@+id/map"
            android:name="com.iesribera.myschoolcafeteria.ui.dashboard.MapsFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_maps" />

    <fragment
            android:id="@+id/notification"
            android:name="com.iesribera.myschoolcafeteria.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications" />
</navigation>