<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#73EDFF">

    <!--    TODO: elena la rotación que aparece en los apuntes-->
    <!--    <android.support.v7.widget.CardView-->
    <!--            android:id="@+id/card_view"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintVertical_bias="0.103"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent">-->

    <!--        <ImageView-->
    <!--                android:id="@+id/card_view_image"-->
    <!--                android:layout_width="fill_parent"-->
    <!--                android:layout_height="100dp"-->
    <!--                android:layout_alignParentStart="true"-->
    <!--                android:layout_alignParentTop="true"-->
    <!--                android:scaleType="centerCrop" />-->

    <!--    </android.support.v7.widget.CardView>-->

    <ImageView
            android:id="@+id/item_photo"
            android:layout_width="358dp"
            android:layout_height="285dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cafeteria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintVertical_bias="0.216"
            android:contentDescription="@string/imagen_cafeteria" />

    <TextView
            android:text="@string/main_header"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.042" />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.692"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/uoc_logo"
            android:layout_width="189dp"
            android:layout_height="123dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintVertical_bias="0.907"
            android:contentDescription="@string/logo_uoc" />

</androidx.constraintlayout.widget.ConstraintLayout>